--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,7 +29,9 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
 file.reference.jackson-core-asl-1.9.2.jar=C:\\Users\\Hector\\Downloads\\jackson-core-asl-1.9.2.jar
+file.reference.jackson-core-asl-1.9.2.jar-1=jackson-core-asl-1.9.2.jar
 file.reference.jackson-mapper-asl.jar=C:\\Users\\Hector\\Downloads\\jackson-mapper-asl.jar
+file.reference.jackson-mapper-asl.jar-1=jackson-mapper-asl.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -45,7 +47,9 @@ javac.classpath=\
     ${libs.jpa2-persistence.classpath}:\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.jackson-core-asl-1.9.2.jar}:\
-    ${file.reference.jackson-mapper-asl.jar}
+    ${file.reference.jackson-mapper-asl.jar}:\
+    ${file.reference.jackson-core-asl-1.9.2.jar-1}:\
+    ${file.reference.jackson-mapper-asl.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
