Informe pdf incluido

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.itextpdf-5.5.1.jar=itextpdf-5.5.1.jar
 file.reference.jackson-core-asl-1.9.2.jar=C:\\Users\\Hector\\Downloads\\jackson-core-asl-1.9.2.jar
 file.reference.jackson-core-asl-1.9.2.jar-1=jackson-core-asl-1.9.2.jar
 file.reference.jackson-mapper-asl.jar=C:\\Users\\Hector\\Downloads\\jackson-mapper-asl.jar
@@ -49,7 +50,8 @@ javac.classpath=\
     ${file.reference.jackson-core-asl-1.9.2.jar}:\
     ${file.reference.jackson-mapper-asl.jar}:\
     ${file.reference.jackson-core-asl-1.9.2.jar-1}:\
-    ${file.reference.jackson-mapper-asl.jar-1}
+    ${file.reference.jackson-mapper-asl.jar-1}:\
+    ${file.reference.itextpdf-5.5.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
