--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,6 +33,7 @@ file.reference.jackson-core-asl-1.9.2.jar=C:\\Users\\Hector\\Downloads\\jackson-
 file.reference.jackson-core-asl-1.9.2.jar-1=jackson-core-asl-1.9.2.jar
 file.reference.jackson-mapper-asl.jar=C:\\Users\\Hector\\Downloads\\jackson-mapper-asl.jar
 file.reference.jackson-mapper-asl.jar-1=jackson-mapper-asl.jar
+file.reference.javax.mail.jar=javax.mail.jar
 file.reference.opennlp-tools-1.6.0.jar=apache-opennlp-1.6.0\\lib\\opennlp-tools-1.6.0.jar
 file.reference.opennlp-uima-1.6.0.jar=apache-opennlp-1.6.0\\lib\\opennlp-uima-1.6.0.jar
 includes=**
@@ -55,7 +56,8 @@ javac.classpath=\
     ${file.reference.jackson-mapper-asl.jar-1}:\
     ${file.reference.itextpdf-5.5.1.jar}:\
     ${file.reference.opennlp-tools-1.6.0.jar}:\
-    ${file.reference.opennlp-uima-1.6.0.jar}
+    ${file.reference.opennlp-uima-1.6.0.jar}:\
+    ${file.reference.javax.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
